sync source  code from stone project