@@ -39,7 +39,7 @@ public class BeanUtil {
     //a SLF4 logger used in stone project
     public static final Logger CommonLog = LoggerFactory.getLogger(BeanUtil.class);
     //Class loader
-    private static final ClassLoader classLoader = BeanUtil.class.getClassLoader();
+    public static final ClassLoader BeeClassLoader = BeanUtil.class.getClassLoader();
 
     /**
      * set a field accessible under AccessController
@@ -233,7 +233,7 @@ public class BeanUtil {
      * @throws ClassNotFoundException when class not found
      */
     public static Class<?> loadClass(String className) throws ClassNotFoundException {
-        return Class.forName(className, true, classLoader);
+        return Class.forName(className, true, BeeClassLoader);
     }
 
     /**
@@ -245,8 +245,10 @@ public class BeanUtil {
      * @throws InstantiationException when class not found
      * @throws IllegalAccessException when class not found
      */
-    public static Object createClassInstance(String className) throws ClassNotFoundException, InstantiationException, IllegalAccessException {
-        return Class.forName(className, true, classLoader).newInstance();
+    public static Object createClassInstance(String className) throws ClassNotFoundException,
+            NoSuchMethodException, SecurityException, InstantiationException, IllegalAccessException,
+            IllegalArgumentException, InvocationTargetException {
+        return Class.forName(className, true, BeeClassLoader).getDeclaredConstructor().newInstance();
     }
 
     /**
@@ -258,7 +260,8 @@ public class BeanUtil {
      * @return an instance of bean class
      * @throws BeanException when create failed
      */
-    public static Object createClassInstance(String beanClassName, Class<?> parentClass, String objectClassType) throws ClassNotFoundException, BeanException {
+    public static Object createClassInstance(String beanClassName, Class<?> parentClass, String objectClassType)
+            throws ClassNotFoundException, BeanException {
         return createClassInstance(loadClass(beanClassName), parentClass != null ? new Class[]{parentClass} : null, objectClassType);
     }
 
@@ -330,7 +333,7 @@ public class BeanUtil {
         StringBuilder buf = new StringBuilder(classes.length * 10);
         for (Class<?> clazz : classes) {
             if (clazz == null) continue;
-            if (buf.length() > 0) buf.append(",");
+            if (buf.length() == 0) buf.append(",");
             buf.append(clazz.getName());
         }
         return buf.toString();
@@ -355,7 +358,7 @@ public class BeanUtil {
         text = text.trim();
 
         if (targetType == char.class || targetType == Character.class) {
-            return Character.valueOf(text.charAt(0));
+            return text.charAt(0);
         } else if (targetType == boolean.class || targetType == Boolean.class) {
             return Boolean.valueOf(text);
         } else if (targetType == byte.class || targetType == Byte.class) {
@@ -388,9 +391,9 @@ public class BeanUtil {
         } else if (Collection.class.isAssignableFrom(targetType)) {
             if (setMethod == null) return null;
 
-            Collection collection;
+            Collection<Object> collection;
             if (!Modifier.isAbstract(targetType.getModifiers())) {
-                collection = (Collection<?>) targetType.newInstance();
+                collection = (Collection) targetType.getDeclaredConstructor().newInstance();
             } else if (Set.class.isAssignableFrom(targetType)) {
                 collection = new HashSet<>(1);
             } else {
@@ -409,7 +412,7 @@ public class BeanUtil {
             }
             return collection;
         } else {
-            Object objInstance = Class.forName(text, true, classLoader).newInstance();
+            Object objInstance = Class.forName(text, true, BeeClassLoader).getDeclaredConstructor().newInstance();
             if (targetType.isInstance(objInstance)) return objInstance;
             throw new ClassCastException();
         }
